# Notification-Platform

./: Program.cs  appsettings.json  docker-compose.yaml  justfile  lefthook.yaml  notification-platform.sln  package.json  pnpm-lock.yaml
Configuration/: DatabaseConfiguration.cs
Controllers/: PartnerController.cs
Models/: Partner.cs
NotificationPlatform/: NotificationPlatform.csproj  Program.cs  appsettings.json  docker-compose.yaml
NotificationPlatform.Scripts/: GenerateTypes.cs  NotificationPlatform.Scripts.csproj  Program.cs
NotificationPlatform.Tests/: .editorconfig  EmailSegmentExpressionTests.cs  ExampleTest.cs  NotificationPlatform.Tests.csproj  SbeeTests.cs
NotificationPlatform.Tracker/: Cargo.toml  flake.nix
NotificationPlatform.Tracker/sbee/: Cargo.toml
NotificationPlatform.Tracker/sbee/src/: lib.rs
NotificationPlatform.Tracker/src/: event_publisher.rs  identifiers.rs  main.rs  options.rs  telemetry.rs  web.rs
NotificationPlatform.Tracker/src/event_publisher/: notifier.rs  publisher.rs
NotificationPlatform.Web/: .env  biome.json  codegen.ts  package.json  pnpm-lock.yaml  theme.json
NotificationPlatform.Web/src/: App.tsx  BasicLayot.tsx  CookieConsentConfig.ts  NavigationRoutes.tsx  PageURLs.tsx  RoutesAndUrls.tsx  i18n.ts  index.css  routes.tsx  vite-env.d.ts
NotificationPlatform/Auth/: HasTenantHandler.cs  HasTenantRequirement.cs
NotificationPlatform/Configuration/: AuthConfiguration.cs  SecurityConfiguration.cs  TrackerConfiguration.cs  WebConfiguration.cs
NotificationPlatform/Models/: Contact.cs  (+2 more)
Properties/: launchSettings.json
(+100 files in other folders)
