[package]
name = "notification-platform-tracker"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "sbee" ]

[dependencies]
opentelemetry = "0.28"
opentelemetry-appender-tracing = "0.28"
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"]}
opentelemetry_sdk = "0.28"
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["std"]}
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
clap = { version = "4.5.30", features = ["derive", "env"] }
sbee = { path = "./sbee" }
hex = "0.4.3"
