[package]
name = "notification-platform-tracker"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "sbee" ]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
sbee = { path = "./sbee" }
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "time", "uuid"] }
tokio-stream = "0.1"
base64ct = "=1.6"
itertools = "0.14"
time = "0.3"
uuid = { version = "1.15.1", features = ["serde"] }
